# openenv-datacleaning

./: .gitignore  Dockerfile  README.md  SPACES_README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  validate_openenv.py
env/: datasets.py  environment.py  models.py
graders/: graders.py
server/: app.py
static/: index.html
tests/: test_environment.py
