[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-datacleaning"
version = "1.0.0"
description = "A real-world data cleaning and validation environment for AI agents"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "openai>=2.7.2",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/hareesh999/openenv-datacleaning"
Repository = "https://github.com/harish0999-coder/openenv-datacleaning"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "graders*", "server*"]
